<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Language Menu -->
    <item
        android:id="@+id/action_language"
        android:title="@string/language_menu"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_spanish"
                android:title="@string/spanish" />
            <item
                android:id="@+id/action_english"
                android:title="@string/english" />
        </menu>
    </item>
    <!-- Theme Menu -->
    <item
        android:id="@+id/action_theme"
        android:title="@string/theme_menu"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_light"
                android:title="@string/light_theme" />
            <item
                android:id="@+id/action_dark"
                android:title="@string/dark_theme" />
        </menu>
    </item>
</menu>